<LinearLayout android:orientation="vertical"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/brown"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView2"
        android:layout_marginTop="50dp"
        android:background="@mipmap/title"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:text="@string/main_title"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textSize="27sp"
        android:id="@+id/textView"

        android:textColor="@color/gray"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="30dp"

         />
    <Button
        android:id="@+id/newgame"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/new_game_label"
        android:layout_marginTop="80dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/button_shape"
         />


    <Button
        android:id="@+id/aboutgame"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/about_label"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/button_shape"
        android:layout_alignBaseline="@+id/exitgame"
        android:layout_alignBottom="@+id/exitgame"
        />

    <Button
        android:id="@+id/exitgame"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_shape"
        android:text="@string/exit_label"
        android:layout_marginBottom="100dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_alignParentBottom="true"
         />

    </LinearLayout>